add entities and migration

--- a/CarRentalManagement/Server/appsettings.json
+++ b/CarRentalManagement/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CarRentalManagement.Server-74914F6F-D2FA-4043-9F34-7E19C269D5C9;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CarRentalManagementDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
